Fix Prime logo distortion by ensuring correct aspect ratio and size

--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -226,7 +226,9 @@
         }
 
         .prime-icon {
-            height: 14px;
+            height: 16px;
+            width: auto;
+            object-fit: contain;
             margin-bottom: 4px;
         }
 
